--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&family=Sora&family=Work+Sans&display=swap");
+
+body {
+  background: #f4f6f8;
+}
