added how it works

--- a/src/styles/Features.css
+++ b/src/styles/Features.css
@@ -44,7 +44,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 1.875rem;
-  background: var(--primary-primary-400, #413c6d);
+  background: #413c6d;
   width: 2rem;
   height: 2rem;
 }
