--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&family=Sora&family=Work+Sans&display=swap");
 
 body {
+  margin: 0;
   background: #f4f6f8;
 }
